v0.11
	* ADD : Shift-Right button to drag-zoom
	* FIX : Qt slows to a crawl when drawing lines offscreen to a large virtual canvas, clipping enabled or not (Qt bug?). Try to otimize roads/track segments drawing to cope with this.
	* FIX : Save also the redo history in a MDC document
	* FIX : Allow deletion of a node from a track without deleting the whole segment
	* FIX : Add a preference option to disable styling for Track layers + re-inject default waypoint painting from dantje 
	* ADD : non-uplodable tags; tags with key beginnig and ending with an underscore ("_") won't be uploaded
	* ADD : ability to commit features from non-uplodable layers to the dirty layer, i.e. make them uploadable
	* FIX : bump MDC documents to version 1.1 due to bug-fixes in history saving; history from version 1.0 MDC won't be imported.
	* ADD : Basic support for waypoints/logpoints from gpx files
	* ADD : altitude and velocity to NMEA import
	* FIX : background image cache: delete older images from cache first
	* ADD : context menu functionality to the map
	* FIX : Show tracksegment even if it only intersects the viewport
	* ADD : Encode speed and slope in track segments
	* FIX : Handle relative paths when loading files
	* FIX : Clip track segments on viewport
	* ADD : Show length of selected way in info dock
	* ADD : Display distance in CreateSingleWay
	* FIX : "Dynamically" display all built-in styles in the preferences dialog rather than pre-defined ones
	* ADD :  special value "_NULL_" to TagSelector; matches non-existent or empty tag
	* FIX : allow punctuation in tag selector
	* ADD : "not", "true", "false", "[Default]" keywords to the Tag Selector; "[Default]" specifies the style for features not having a specific (i.e. non-default) style selected. Together with "Type Is", allows for "bug-fixing" styles "a la Maplint"